--- a/res/xml/icons_preferences.xml
+++ b/res/xml/icons_preferences.xml
@@ -34,4 +34,13 @@
         android:summary="%s"
         android:defaultValue="@string/config_defaultIconPackPackage"
         android:persistent="true" />
+
+    <ListPreference
+        android:key="pref_icon_size"
+        android:title="@string/icon_size_title"
+        android:summary="%s"
+        android:entries="@array/icon_size_names"
+        android:entryValues="@array/icon_size_values"
+        android:defaultValue="average"
+        android:persistent="true" />
 </androidx.preference.PreferenceScreen> 
