Make notifications gesture optional
Change-Id: Ibe4199821cad5e129aa28bed5fd6ddb4250b3597

--- a/res/xml/gestures_preferences.xml
+++ b/res/xml/gestures_preferences.xml
@@ -16,4 +16,11 @@
         android:entryValues="@array/pref_homescreen_dt_gestures_values"
         android:defaultValue=""
         android:persistent="false" />
+
+    <SwitchPreference
+        android:key="pref_notifications_gesture"
+        android:title="@string/pref_notifications_gesture_title"
+        android:summary="@string/pref_notifications_gesture_summary"
+        android:defaultValue="true"
+        android:persistent="true"/>
 </androidx.preference.PreferenceScreen> 
