--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -106,4 +106,6 @@
     <string name="pref_homescreen_dt_gestures_none">None</string>
     <string name="pref_homescreen_dt_gestures_sleep">Sleep</string>
     <string name="pref_homescreen_dt_gestures_torch">Flashlight</string>
+    <string name="pref_notifications_gesture_title">Notifications gesture</string>
+    <string name="pref_notifications_gesture_summary">Swipe vertically downward on the home screen to show the QS panel</string>
 </resources>
