--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -115,4 +115,8 @@
     <string name="pref_homescreen_gestures_screenshot">Screenshot</string>
     <string name="pref_homescreen_gestures_notifications">Notifications</string>
     <string name="pref_homescreen_gestures_qs_panel">QS panel</string>
+
+    <!-- Show QSB on homescreen -->
+    <string name="pref_qsb_show_title">Quick Search Bar</string>
+    <string name="pref_qsb_show_summary">Show quick searchbar on homescreen</string>
 </resources>
