Option to hide/show quicksearchbar
Bootleggers (jenslody) edit: Let's toggle just the bottom search app, as the all apps search toggle doesn't seems to work.
Original commit: https://github.com/hundeva/Lean-Launcher/commit/4a387a1ab285071a2fcd73f77f39e612a011f2c9

Signed-off-by: spezi77 <spezi7713@gmx.net>
Change-Id: I3603b5b684a209a92be7ede042804ade9441be1c
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>

--- a/res/values/cvs_strings.xml
+++ b/res/values/cvs_strings.xml
@@ -119,4 +119,8 @@
     <!-- Show QSB on homescreen -->
     <string name="pref_qsb_show_title">At A Glance</string>
     <string name="pref_qsb_show_summary">Show At A Glance</string>
+
+    <!-- Hide/Show search bars -->
+    <string name="bottom_search_bar_title">Show search bar on bottom</string>
+    <string name="bottom_search_bar_summary">Show the search bar on the Dock</string>
 </resources>
