Launcher3: Disable top/hotseat gradient
The launcher adds some subtle gradient over the statusbar and the hotseat to highlight the statusbar even on pitch black wallpapers.
For those who got annoyed by this, we decided to make it a toggle to make them disappear.
Credits to the pixel launcher bois who nitpicked this.

Signed-off-by: Arghya Chanda <arghyac35@gmail.com>

--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -30,4 +30,10 @@
 	
     <!-- SmartSpace -->
     <string name="smartspace_preferences" translatable="false">Preferences</string>
+ 
+    <!-- Gradients on Workspace/Hotseat -->
+    <string name="workspace_gradient_title">Show gradient on top</string>
+    <string name="workspace_gradient_summary">Enable a subtle gradient from the status bar</string>
+    <string name="hotseat_gradient_title">Show gradient on bottom</string>
+    <string name="hotseat_gradient_summary">Enable a subtle gradient from the launcher dock</string>
 </resources>
