--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -62,6 +62,22 @@
         android:defaultValue="false"
         android:persistent="true" />
 
+    <SwitchPreference
+        android:key="pref_show_workspace_grad"
+        android:title="@string/workspace_gradient_title"
+        android:summary="@string/workspace_gradient_summary"
+        android:defaultValue="true"
+        android:persistent="true"/>
+
+    <SwitchPreference
+        android:key="pref_show_hotseat_grad"
+        android:title="@string/hotseat_gradient_title"
+        android:summary="@string/hotseat_gradient_summary"
+        android:defaultValue="true"
+        android:persistent="true"/>
+
+    </PreferenceCategory>
+
     <androidx.preference.PreferenceScreen
         android:key="pref_developer_options"
         android:persistent="false"
