--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -13,7 +13,7 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <!-- General -->
     <string name="settings_title">Settings</string>
@@ -55,4 +55,14 @@
     <!-- Icon mask -->
     <string name="legacy_icon_mask_title">Disable shape mask on legacy icons</string>
     <string name="legacy_icon_mask_summary">Doesn\'t allow icons to be reshaped with adaptive icon mask. Icon pack must be reapplied after toggling</string>
+
+    <!-- Trust apps -->
+    <string name="trust_apps_manager_name">Hidden &amp; Protected apps</string>
+    <string name="trust_apps_auth_manager">Unlock to manage the hidden and protected apps</string>
+    <string name="trust_apps_auth_open_app">Authenticate to open %1$s</string>
+    <string name="trust_apps_loading">Loading\u2026</string>
+    <string name="trust_apps_no_lock_error">Please set up a secure lock screen to restrict app access</string>
+    <string name="trust_apps_help">Help</string>
+    <string name="trust_apps_info_hidden">Hidden apps and their widgets are hidden from the drawer</string>
+    <string name="trust_apps_info_protected">Protected apps require authentication to be opened from the launcher</string>
 </resources>
