--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -82,4 +82,8 @@
 
     <!-- Custom icon pack as default. Can be empty -->
     <string name="config_defaultIconPackPackage" translatable="false"></string>
+
+    <!-- Lock desktop -->
+    <string name="lock_desktop_title">Lock desktop</string>
+    <string name="lock_desktop_summary">Prevent the homescreen from being modified</string>
 </resources>
