--- a/res/xml/home_screen_preferences.xml
+++ b/res/xml/home_screen_preferences.xml
@@ -8,6 +8,13 @@
         android:title="@string/title_show_google_app" />
 
     <SwitchPreference
+        android:key="pref_lock_desktop"
+        android:title="@string/lock_desktop_title"
+        android:summary="@string/lock_desktop_summary"
+        android:defaultValue="false"
+        android:persistent="true" />
+
+    <SwitchPreference
         android:key="pref_show_workspace_grad"
         android:title="@string/workspace_gradient_title"
         android:summary="@string/workspace_gradient_summary"
