--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -66,4 +66,16 @@
     <string name="trust_apps_help">Help</string>
     <string name="trust_apps_info_hidden">Hidden apps and their widgets are hidden from the drawer</string>
     <string name="trust_apps_info_protected">Protected apps require authentication to be opened from the launcher</string>
+
+	<!-- AppInfo -->
+    <string name="app_info_subtext" translatable="false">Swipe down to close app info.</string>
+    <string name="app_info_version_value" translatable="false">%1$s (%2$d)</string>
+    <string name="placeholder_string" translatable="false">Loading...</string> <!-- Used for preference height loading. -->
+    <string name="app_info_icon_pack" translatable="false">Icon pack</string>
+    <string name="app_info_icon_pack_none" translatable="false">None</string>
+    <string name="app_info_source" translatable="false">Source</string>
+    <string name="app_info_source_unknown" translatable="false">Unknown</string>
+    <string name="app_info_last_update" translatable="false">Last update</string>
+    <string name="app_info_version" translatable="false">Version</string>
+    <string name="app_info_more" translatable="false">More</string>
 </resources>
