--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -97,5 +97,7 @@
     <string name="number_of_rows_title">Grid and app drawer rows</string>
     <string name="number_of_hotseat_title">Homescreen quicklaunch icons</string>
     <string name="state_loading">Applying\u2026</string>
-    <string name="app_drawer_category_title">App drawer</string>
+
+    <string name="allow_two_line_labels_title">Allow two line labels</string>
+    <string name="allow_two_line_labels_summary">For long app or folder names</string>
 </resources>
