--- a/res/xml/home_screen_preferences.xml
+++ b/res/xml/home_screen_preferences.xml
@@ -15,6 +15,13 @@
         android:persistent="true" />
 
     <SwitchPreference
+        android:defaultValue="false"
+        android:key="pref_allow_to_line_labels"
+        android:persistent="true"
+        android:summary="@string/allow_two_line_labels_summary"
+        android:title="@string/allow_two_line_labels_title" />
+
+    <SwitchPreference
         android:key="pref_show_workspace_grad"
         android:title="@string/workspace_gradient_title"
         android:summary="@string/workspace_gradient_summary"
