--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -23,8 +23,8 @@
     <string name="home_category_summary">Set Google now panel and more</string>
     <string name="icons_category_title">Icons</string>
     <string name="icons_category_summary">Set icon shape and more</string>
-    <string name="app_drawer_category_title">App drawer</string>
-    <string name="app_drawer_category_summary">Customize your app drawer</string>
+    <string name="gestures_category_title">Gestures</string>
+    <string name="gestures_category_summary">Enhance your experience</string>
     <string name="misc_category_title">Miscellaneous</string>
     <string name="misc_category_summary">Other options</string>
 
