Add a flashlight gesture & group it with the sleep one
This adds a flashlight double tap gesture, using the existing
model laid out Thecrazyskull/Ezio. Also opens the door to add in more
options into the case switch in the event that someone wants to
add something else (screenshot, hotspot, etc).

Change-Id: Iba1458f2988259a3448490c67a238cd13940e900

--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -100,4 +100,10 @@
 
     <string name="allow_two_line_labels_title">Allow two line labels</string>
     <string name="allow_two_line_labels_summary">For long app or folder names</string>
+
+    <string name="pref_homescreen_dt_gestures_title">Double tap gesture</string>
+    <string name="pref_homescreen_dt_gestures_summary">Select the action of the double tap gesture on the home screen</string>
+    <string name="pref_homescreen_dt_gestures_none">None</string>
+    <string name="pref_homescreen_dt_gestures_sleep">Sleep</string>
+    <string name="pref_homescreen_dt_gestures_torch">Flashlight</string>
 </resources>
