--- a/res/values/du_arrays.xml
+++ b/res/values/du_arrays.xml
@@ -68,4 +68,17 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <item>6</item>
         <item>7</item>
     </string-array>
+
+    <!-- Homescreen double tap gestures -->
+    <string-array translatable="false" name="pref_homescreen_dt_gestures_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
+    <string-array name="pref_homescreen_dt_gestures_names">
+        <item>@string/pref_homescreen_dt_gestures_none</item>
+        <item>@string/pref_homescreen_dt_gestures_sleep</item>
+        <item>@string/pref_homescreen_dt_gestures_torch</item>
+    </string-array>
 </resources>
