--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -68,7 +68,7 @@
     <string name="trust_apps_info_hidden">Hidden apps and their widgets are hidden from the drawer</string>
     <string name="trust_apps_info_protected">Protected apps require authentication to be opened from the launcher</string>
 
-	<!-- AppInfo -->
+    <!-- AppInfo -->
     <string name="app_info_subtext" translatable="false">Swipe down to close app info.</string>
     <string name="app_info_version_value" translatable="false">%1$s (%2$d)</string>
     <string name="placeholder_string" translatable="false">Loading...</string> <!-- Used for preference height loading. -->
@@ -79,4 +79,7 @@
     <string name="app_info_last_update" translatable="false">Last update</string>
     <string name="app_info_version" translatable="false">Version</string>
     <string name="app_info_more" translatable="false">More</string>
+
+    <!-- Custom icon pack as default. Can be empty -->
+    <string name="config_defaultIconPackPackage" translatable="false"></string>
 </resources>
