--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -19,7 +19,7 @@
     <string name="delete_package_intent" translatable="false">#Intent;action=android.intent.action.DELETE;launchFlags=0x10800000;end</string>
 
     <!-- String representing the fragment class for settings activity.-->
-    <string name="settings_fragment_name" translatable="false">com.aosp.launcher.AospSettings$AospSettingsFragment</string>
+    <string name="settings_fragment_name" translatable="false">com.android.launcher3.settings.SettingsActivity$LauncherSettingsFragment</string>
 
 <!-- DragController -->
     <item type="id" name="drag_event_parity" />
@@ -62,14 +62,14 @@
 
     <!-- Various classes overriden by projects/build flavors. -->
     <string name="app_filter_class" translatable="false">com.android.launcher3.trust.HiddenAppsFilter</string>
-    <string name="icon_provider_class" translatable="false">com.aosp.launcher.icons.ThirdPartyIconProvider</string>
-    <string name="drawable_factory_class" translatable="false">com.aosp.launcher.icons.ThirdPartyDrawableFactory</string>
+    <string name="icon_provider_class" translatable="false">com.android.launcher3.icons.ThirdPartyIconProvider</string>
+    <string name="drawable_factory_class" translatable="false">com.android.launcher3.icons.ThirdPartyDrawableFactory</string>
     <string name="user_event_dispatcher_class" translatable="false"></string>
     <string name="stats_log_manager_class" translatable="false"></string>
     <string name="app_transition_manager_class" translatable="false"></string>
     <string name="instant_app_resolver_class" translatable="false"></string>
     <string name="main_process_initializer_class" translatable="false"></string>
-    <string name="system_shortcut_factory_class" translatable="false"></string>
+    <string name="system_shortcut_factory_class" translatable="false">com.android.launcher3.customization.ShadeShortcutFactory</string>
     <string name="app_launch_tracker_class" translatable="false"></string>
     <string name="test_information_handler_class" translatable="false"></string>
     <string name="launcher_activity_logic_class" translatable="false"></string>
