--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -17,6 +17,7 @@
 
     <!-- General -->
     <string name="settings_title">Settings</string>
+    <string name="pref_value_default" translatable="false">Default</string>
 
     <!-- Categories -->
     <string name="home_category_title">Home screen</string>
