--- a/res/xml/icons_preferences.xml
+++ b/res/xml/icons_preferences.xml
@@ -21,12 +21,6 @@
         android:defaultValue="true"
         android:persistent="true" />
 
-    <com.android.launcher3.settings.IconPackPreference
-        android:key="pref_iconPackPackage"
-        android:title="@string/icon_pack"
-        android:summary="%s"
-        android:persistent="true" />
-
     <SwitchPreference
         android:key="pref_legacy_icon_mask"
         android:title="@string/legacy_icon_mask_title"
@@ -34,25 +28,11 @@
         android:defaultValue="false"
         android:persistent="true"/>
 
-    <com.aosp.launcher.settings.ReloadingListPreference
+    <com.android.launcher3.settings.ReloadingListPreference
         android:key="pref_icon_pack"
         android:title="@string/app_info_icon_pack"
         android:summary="%s"
         android:defaultValue=""
         android:persistent="true" />
-
-    <com.android.launcher3.settings.NotificationDotsPreference
-        android:key="pref_icon_badging"
-        android:title="@string/notification_dots_title"
-        android:persistent="false"
-        android:widgetLayout="@layout/notification_pref_warning" >
-        <intent android:action="android.settings.NOTIFICATION_SETTINGS">
-            <!-- This extra highlights the "Allow notification dots" field in Notification settings -->
-            <extra
-                android:name=":settings:fragment_args_key"
-                android:value="notification_badging" />
-        </intent>
-    </com.android.launcher3.settings.NotificationDotsPreference>
-
 
 </androidx.preference.PreferenceScreen> 
