--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -16,7 +16,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <!-- General -->
-    <string name="settings_title">Settings</string>
+    <string name="settings_title">Corvus Settings</string>
     <string name="pref_value_default" translatable="false">Default</string>
 
     <!-- Categories -->
